# internal/api/v3/server.go
@@ -1,6 +1,11 @@
 package apiv3
 
-import "github.com/bmstu-itstech/itsreg/internal/app"
+import (
+	"net/http"
+
+	"github.com/bmstu-itstech/itsreg/internal/app"
+	"github.com/go-chi/render"
+)
 
 type Server struct {
 	app    *app.Application
@@ -12,4 +17,8 @@ func NewServer(a *app.Application, prefix string) *Server {
 		app:    a,
 		prefix: prefix,
 	}
+}
+
+func (s *Server) HealthCheck(w http.ResponseWriter, r *http.Request) {
+	render.JSON(w, r, map[string]string{"status": "ok"})
 }
